@@ -2,6 +2,10 @@ Version 1.44
 ------------
 Rewritten sessionsetup support, including support for legacy SMB
 session setup needed for OS/2 and older servers such as Windows 95 and 98.
+Fix oops on ls to OS/2 servers.  Add support for level 1 FindFirst
+so we can do search (ls etc.) to OS/2.  Do not send NTCreateX
+or recent levels of FindFirst unless server says it supports NT SMBs
+(instead use legacy equivalents from LANMAN dialect).
 
 Version 1.43
 ------------
